Adiciona uma lista de  palavras-chave

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       de cafés especiais em meio a histórias inspiradoras. Perfeito
       para estudos, encontros ou momentos de tranquilidade."
     />
+    <meta
+      name="keywords"
+      content="café biblioteca, cafeteria temática, reserva de mesas,
+      café e livros, receitas de café, estudo com café, eventos
+      literários, Triple Peaks"
+    />
     <title>Café Dev</title>
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
