--- a/index.html
+++ b/index.html
@@ -173,7 +173,35 @@
           </form>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer" id="footer">
+        <div class="footer__content">
+            <img
+              class="footer__logo"
+              src="./images/logo_coffeeshop_light.svg"
+              alt="logo Triple Espresso"
+            />
+            <div class="footer__circle"></div>
+            <div class="footer__social">
+              <h3 class="footer__social-heading">Midia social</h3>
+              <ul class="footer__list">
+              <li class="footer__list-item">
+                <a class="footer__social-link" href="#"
+                  ><img class="footer__social-icon" src="./images/facebook_white.svg" />Facebook</a
+                >
+              </li>
+              <li class="footer__list-item">
+                <a class="footer__social-link" href="#"
+                  ><img class="footer__social-icon" src="./images/instagram_white.svg" />Instagram</a
+                >
+              </li>
+             </ul>
+            </div>
+          </div>
+          <div class="footer__copyright">
+            <p>© 2025 Beatriz Mortari</p>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
