Importa o normalize.css para o index.css, adiciona alt em logos de midia social e corrige div incorreta

--- a/index.html
+++ b/index.html
@@ -175,31 +175,38 @@
       </main>
       <footer class="footer" id="footer">
         <div class="footer__content">
-            <img
-              class="footer__logo"
-              src="./images/logo_coffeeshop_light.svg"
-              alt="logo Triple Espresso"
-            />
-            <div class="footer__circle"></div>
-            <div class="footer__social">
-              <h3 class="footer__social-heading">Midia social</h3>
-              <ul class="footer__list">
+          <img
+            class="footer__logo"
+            src="./images/logo_coffeeshop_light.svg"
+            alt="logo Triple Espresso"
+          />
+          <div class="footer__circle"></div>
+          <div class="footer__social">
+            <h3 class="footer__social-heading">Midia social</h3>
+            <ul class="footer__list">
               <li class="footer__list-item">
                 <a class="footer__social-link" href="#"
-                  ><img class="footer__social-icon" src="./images/facebook_white.svg" />Facebook</a
+                  ><img
+                    class="footer__social-icon"
+                    src="./images/facebook_white.svg"
+                    alt="logo Facebook"
+                  />Facebook</a
                 >
               </li>
               <li class="footer__list-item">
                 <a class="footer__social-link" href="#"
-                  ><img class="footer__social-icon" src="./images/instagram_white.svg" />Instagram</a
+                  ><img
+                    class="footer__social-icon"
+                    src="./images/instagram_white.svg"
+                    alt="logo Instagram"
+                  />Instagram</a
                 >
               </li>
-             </ul>
-            </div>
+            </ul>
           </div>
-          <div class="footer__copyright">
-            <p>© 2025 Beatriz Mortari</p>
-          </div>
+        </div>
+        <div class="footer__copyright">
+          <p>© 2025 Beatriz Mortari</p>
         </div>
       </footer>
     </div>
